kubernetes/istio-service-debug.yml
# For debugging the Istio proxy connections -- not being used right now
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nats
  namespace: nats-cluster
spec:
  hosts:
    - nats-cluster.nats-cluster.svc.cluster.local
  tcp:
    - match:
        - port: 4222
      route:
        - destination:
            host: nats-cluster.nats-cluster.svc.cluster.local
            port:
              number: 4222
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nats-management
  namespace: nats-cluster
spec:
  hosts:
    - nats-cluster-mgmt.nats-cluster.svc.cluster.local
  tcp:
    - match:
        - port: 8222
      route:
        - destination:
            host: nats-cluster-mgmt.nats-cluster.svc.cluster.local
            port:
              number: 8222
    - match:
        - port: 6222
      route:
        - destination:
            host: nats-cluster-mgmt.nats-cluster.svc.cluster.local
            port:
              number: 6222
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "nats"
  namespace: nats-cluster
spec:
  selector:
    matchLabels:
      app: nats
  mtls:
    mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nats
  namespace: nats-cluster
spec:
  host: nats-cluster.nats-cluster.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nats-server-mgmt
  namespace: nats-cluster
spec:
  host: nats-cluster-mgmt.nats-cluster.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
